--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.ib/interactive-brokers-api -->
+		<!-- https://mvnrepository.com/artifact/com.interactivebrokers.tws/tws-api -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,6 +53,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
