--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost/test_project
 spring.datasource.username=postgres
 spring.datasource.password=docker
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.liquibase.change-log=classpath:db/changelog/changelog.master.xml
