--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost/test_project
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
-spring.datasource.password=docker
+spring.datasource.password=test
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.liquibase.change-log=classpath:db/changelog/changelog.master.xml
